--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,69 @@
-html,
-body {
-  padding: 0;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+div {
+  -webkit-tap-highlight-color: transparent;
+}
+
+input[type='file']::-webkit-file-upload-button,
+input[type='file']::file-selector-button {
+  @apply text-white bg-gray-700 hover:bg-gray-600 font-medium text-sm cursor-pointer border-0 py-2.5 pl-8 pr-4;
+  /* margin-inline-start: -1rem;
+    margin-inline-end: 1rem; */
+}
+
+.clickable-card .clickable-card__link::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+}
+
+.alert {
+  position: absolute;
+  top: 2.5rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.rex {
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 50px;
+}
+
+.rex2 {
+  box-shadow: -1px 2px 22px 8px rgba(171, 171, 171, 0.54);
+  -webkit-box-shadow: -1px 2px 22px 8px rgba(171, 171, 171, 0.54);
+  -moz-box-shadow: -1px 2px 22px 8px rgba(171, 171, 171, 0.54);
+  border-radius: 10px;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.feature-bal {
+  background: linear-gradient(
+    90deg,
+    rgba(85, 85, 85, 0.7875525210084033) 0%,
+    rgba(85, 85, 85, 1) 85%,
+    rgba(85, 85, 85, 1) 100%
+  );
 }
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.black-orange-gradient {
+  background: linear-gradient(
+    90deg,
+    rgba(34, 34, 34, 0.7371323529411764) 0%,
+    rgba(68, 68, 68, 0.7371323529411764) 95%,
+    rgba(145, 143, 111, 0.7959558823529411) 100%
+  );
 }
